--- a/SheetDice/AppShell.xaml
+++ b/SheetDice/AppShell.xaml
@@ -108,11 +108,9 @@
         <DataTemplate>
             <Grid BackgroundColor="{StaticResource Primary}"
                   HeightRequest="200">
-                <Label Text="Quì ci sarà l'immagine"
-                       TextColor="White"
-                       FontAttributes="Bold"
-                       HorizontalTextAlignment="Center"
-                       VerticalTextAlignment="Center" />
+                <Image Aspect="AspectFill"
+                    Source="https://www.cmete.com/skins/theme_cmete_2016/images/placeholders/office-image-placeholder.jpg"
+                    Opacity="0.6" />
             </Grid>
         </DataTemplate>
     </Shell.FlyoutHeaderTemplate>
