--- a/SheetDice/Views/PrincipalePage.xaml
+++ b/SheetDice/Views/PrincipalePage.xaml
@@ -16,6 +16,9 @@
                 <Setter Property="Color" Value="Transparent">
                 </Setter>
             </Style>
+            <Style x:Key="Azzurrino" TargetType="StackLayout">
+                <Setter Property="BackgroundColor" Value="LightBlue"></Setter>
+            </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
 
@@ -30,37 +33,69 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"></RowDefinition>
+            <RowDefinition Height="70"></RowDefinition>
+            <RowDefinition Height="70"></RowDefinition>
+            <RowDefinition Height="70"></RowDefinition>
+            <RowDefinition Height="70"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <BoxView Style="{StaticResource Trasparente}" />
-        <BoxView Grid.Column="1"
-                 Style="{StaticResource Trasparente}" />
-        <BoxView Grid.Row="1"
-                 Style="{StaticResource GridStyle}" />
-        <BoxView Grid.Row="1"
-                 Grid.Column="1"
-                 Style="{StaticResource GridStyle}"/>
-        <BoxView Grid.Column="2"
-                 Style="{StaticResource Trasparente}"/>
-        <BoxView Grid.Row="2"
-                 Style="{StaticResource GridStyle}"/>
-        <BoxView Grid.Column="2" Grid.Row="2"
-                 Style="{StaticResource GridStyle}"/>
-        <BoxView Grid.Column="2" Grid.Row="1"
-                 Style="{StaticResource GridStyle}"/>
-        <BoxView Grid.Column="1" Grid.Row="2"
-                 Style="{StaticResource GridStyle}"/>
-        <StackLayout Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
+        <StackLayout Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource Azzurrino}">
             <Label Text="Name:" FontSize="Medium"></Label>
             <Entry x:Name="Nome">
             </Entry>
         </StackLayout>
-        <StackLayout Grid.Row="0" Grid.Column="2">
+        <StackLayout Grid.Row="0" Grid.Column="2" Style="{StaticResource Azzurrino}">
             <Label Text="LV:" FontSize="Medium"></Label>
             <Entry x:Name="Livello" Keyboard="Numeric" MaxLength="2">
             </Entry>
+        </StackLayout>
+        <StackLayout Grid.Column="0" Grid.Row="1">
+            <Label Text="HP MAX" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Start"></Label>
+            <Entry x:Name="HpMax" Keyboard="Numeric" HorizontalTextAlignment="Center">
+            </Entry>
+        </StackLayout>
+        <StackLayout Grid.Column="1" Grid.Row="1">
+            <Label Text="HP" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Start"></Label>
+            <Entry x:Name="Hp" Keyboard="Numeric" HorizontalTextAlignment="Center"></Entry>
+        </StackLayout>
+        <StackLayout Grid.Column="2" Grid.Row="1">
+            <Label Text="HP Temp" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Start"></Label>
+            <Entry x:Name="HpTemp" Keyboard="Numeric" HorizontalTextAlignment="Center"></Entry>
+        </StackLayout>
+        <StackLayout Grid.Column="0" Grid.Row="2">
+            <Label Text="HD:" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"></Label>
+        </StackLayout>
+        <StackLayout Grid.Column="1" Grid.Row="2">
+            <Entry x:Name="Hd" Keyboard="Numeric" VerticalOptions="EndAndExpand"></Entry>
+        </StackLayout>
+        <!--<StackLayout Grid.Column="2" Grid.Row="2">
+            <Button Text="+" Clicked="HdAumento" VerticalOptions="CenterAndExpand" FontSize="Large" BackgroundColor="LightBlue"></Button>
+        </StackLayout> -->
+        <StackLayout Grid.Column="0" Grid.Row="3">
+            <Label Text="AC" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+            <Entry x:Name="Ac" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+        </StackLayout>
+        <StackLayout Grid.Column="1" Grid.Row="3">
+            <Label Text="Prof. Bonus" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+            <Entry x:Name="ProfBonus" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+        </StackLayout>
+        <StackLayout Grid.Column="2" Grid.Row="3">
+            <Label Text="Initiative" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+            <Entry x:Name="Initiative" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+        </StackLayout>
+        <StackLayout Grid.Column="0" Grid.Row="4">
+            <Label Text="Speed" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+            <Entry x:Name="Speed" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+        </StackLayout>
+        <StackLayout Grid.Column="1" Grid.Row="4">
+            <Label Text="PP" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+            <Entry x:Name="PassivePerception" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+        </StackLayout>
+        <StackLayout Grid.Column="2" Grid.Row="4">
+            <Label Text="Inspiration" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+            <Button BackgroundColor="LightBlue" CornerRadius="100" HorizontalOptions="Center"></Button>
         </StackLayout>
     </Grid>
 </ContentPage>
