Bozza Selezione Personaggi
Creata una bozza della pagina selezione personaggi attraverso una listview di oggetti personaggio .
La lista non ha nessuna azione associata e contiene solo elementi fissi pregenerati.

--- a/SheetDice/AppShell.xaml
+++ b/SheetDice/AppShell.xaml
@@ -104,6 +104,10 @@
         <ShellContent Route="Help" ContentTemplate="{DataTemplate local:Help}" />
     </FlyoutItem>
 
+    <FlyoutItem Title="Character Selection">
+        <ShellContent Route="CharacterSelection" ContentTemplate="{DataTemplate local:CharacterSelection}" />
+    </FlyoutItem>
+
     <Shell.FlyoutHeaderTemplate>
         <DataTemplate>
             <Grid BackgroundColor="{StaticResource Primary}"
