--- a/SheetDice/Views/InventoryPage.xaml
+++ b/SheetDice/Views/InventoryPage.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewmodels="clr-namespace:SheetDice.ViewModels"
-             x:Class="SheetDice.Views.InventoryPage"
-             x:DataType="viewmodels:InventoryViewModel">
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:viewmodels="clr-namespace:SheetDice.ViewModels"
+            xmlns:models="clr-namespace:SheetDice.Models"
+            x:Class="SheetDice.Views.InventoryPage"
+            x:DataType="viewmodels:InventoryViewModel">
 
     <ContentPage.BindingContext>
         <viewmodels:InventoryViewModel/>
@@ -36,13 +37,17 @@
                 <Setter Property="HeightRequest" Value="80"/>
                 <Setter Property="HasShadow" Value="True"/>
             </Style>
-            
+
         </ResourceDictionary>
     </ContentPage.Resources>
 
     <ContentPage.Content>
         <Grid RowDefinitions="120,*">
-            <StackLayout Margin="8" Orientation="Horizontal" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+            <StackLayout Margin="8"
+                         Grid.Row="0"
+                         Orientation="Horizontal"
+                         VerticalOptions="CenterAndExpand"
+                         HorizontalOptions="CenterAndExpand">
 
                 <Frame Style="{StaticResource MoneyFrame}">
                     <StackLayout>
@@ -78,16 +83,52 @@
                         <Entry Style="{StaticResource MoneyEntry}"/>
                     </StackLayout>
                 </Frame>
+
+            </StackLayout>
+
+            <StackLayout Grid.Row="1">
+                
+                <Grid ColumnDefinitions="55, *, 85" HeightRequest="30">
+                    <Label Grid.Column="0" Text="Equip" VerticalTextAlignment="End" HorizontalTextAlignment="End"/>
+                    <Label Grid.Column="1" Text="Name" VerticalTextAlignment="End" HorizontalTextAlignment="Center"/>
+                    <Label Grid.Column="2" Text="Quantity" VerticalTextAlignment="End" HorizontalTextAlignment="Start"/>
+                </Grid>
+                
+                <ListView BackgroundColor="Transparent"
+                      ItemsSource="{Binding Equipment}"
+                      SeparatorVisibility="None"
+                      RowHeight="80">
+
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:Item">
+                            <ViewCell>
+                                <Grid Padding="10">
+                                    <Frame Padding="5" BorderColor="Black" CornerRadius="20" HasShadow="True">
+                                        <Grid ColumnDefinitions="50, *, 70">
+                                            <CheckBox Color="Brown" 
+                                                      Grid.Column="0"
+                                                      HorizontalOptions="Center"/>
+                                            <Label Grid.Column="1" 
+                                                   Text="{Binding Name}" 
+                                                   FontSize="Large"
+                                                   VerticalTextAlignment="Center"
+                                                   HorizontalTextAlignment="Start"/>
+                                            <Entry Grid.Column="2" 
+                                                   Text="{Binding Quantity}"
+                                                   HorizontalOptions="Start"
+                                                   WidthRequest="50"
+                                                   HorizontalTextAlignment="Center"/>
+                                        </Grid>
+                                    </Frame>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
                 
             </StackLayout>
 
-
-            <Grid Grid.Row="1" BackgroundColor="Green">
-                
-            </Grid>
-
-
-
         </Grid>
+
     </ContentPage.Content>
 </ContentPage>
