--- a/SheetDice/Views/PrincipalePage.xaml
+++ b/SheetDice/Views/PrincipalePage.xaml
@@ -22,13 +22,6 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -39,7 +32,8 @@
             <RowDefinition Height="70"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition>
+            </ColumnDefinition>
         </Grid.ColumnDefinitions>
         <StackLayout Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource Azzurrino}">
             <Label Text="Name:" FontSize="Medium"></Label>
@@ -48,7 +42,7 @@
         </StackLayout>
         <StackLayout Grid.Row="0" Grid.Column="2" Style="{StaticResource Azzurrino}">
             <Label Text="LV:" FontSize="Medium"></Label>
-            <Entry x:Name="Livello" Keyboard="Numeric" MaxLength="2">
+            <Entry x:Name="Livello" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center">
             </Entry>
         </StackLayout>
         <StackLayout Grid.Column="0" Grid.Row="1">
@@ -68,11 +62,12 @@
             <Label Text="HD:" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"></Label>
         </StackLayout>
         <StackLayout Grid.Column="1" Grid.Row="2">
-            <Entry x:Name="Hd" Keyboard="Numeric" VerticalOptions="EndAndExpand"></Entry>
+            <Label x:Name="Hd" VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="Large"></Label>
         </StackLayout>
-        <!--<StackLayout Grid.Column="2" Grid.Row="2">
-            <Button Text="+" Clicked="HdAumento" VerticalOptions="CenterAndExpand" FontSize="Large" BackgroundColor="LightBlue"></Button>
-        </StackLayout> -->
+        <StackLayout Grid.Column="2" Grid.Row="2">
+            <Button Text="+" VerticalOptions="CenterAndExpand" FontSize="Body" HeightRequest="35" Clicked="HdAumento" BackgroundColor="LightBlue"></Button>
+            <Button Text="-" VerticalOptions="CenterAndExpand" FontSize="Body" HeightRequest="35" Clicked="HdMeno" BackgroundColor="LightBlue"></Button>
+        </StackLayout>
         <StackLayout Grid.Column="0" Grid.Row="3">
             <Label Text="AC" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
             <Entry x:Name="Ac" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
@@ -95,7 +90,7 @@
         </StackLayout>
         <StackLayout Grid.Column="2" Grid.Row="4">
             <Label Text="Inspiration" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
-            <Button BackgroundColor="LightBlue" CornerRadius="100" HorizontalOptions="Center"></Button>
+            <Button BackgroundColor="LightBlue" CornerRadius="100" HorizontalOptions="Center" Clicked="Ispirazione"></Button>
         </StackLayout>
     </Grid>
 </ContentPage>
