--- a/SheetDice/Views/PrincipalePage.xaml
+++ b/SheetDice/Views/PrincipalePage.xaml
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:viewmodels="clr-namespace:SheetDice.ViewModels" 
+             x:DataType="viewmodels:AttackViewModel"
+             xmlns:models="clr-namespace:SheetDice.Models"
              x:Class="SheetDice.Views.Page1">
 
     <ContentPage.Resources>
@@ -62,7 +65,7 @@
             <Label Text="HD:" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"></Label>
         </StackLayout>
         <StackLayout Grid.Column="1" Grid.Row="2">
-            <Label x:Name="Hd" VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="Large"></Label>
+            <Label x:Name="Hd" VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="Large" Text="0"></Label>
         </StackLayout>
         <StackLayout Grid.Column="2" Grid.Row="2">
             <Button Text="+" VerticalOptions="CenterAndExpand" FontSize="Body" HeightRequest="35" Clicked="HdAumento" BackgroundColor="LightBlue"></Button>
@@ -90,7 +93,18 @@
         </StackLayout>
         <StackLayout Grid.Column="2" Grid.Row="4">
             <Label Text="Inspiration" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
-            <Button BackgroundColor="LightBlue" CornerRadius="100" HorizontalOptions="Center" Clicked="Ispirazione"></Button>
+            <Button BackgroundColor="LightBlue" CornerRadius="100" HorizontalOptions="Center" Clicked="Ispirazione" Text="X"></Button>
+        </StackLayout>
+        <StackLayout Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="3">
+            <ListView BackgroundColor="Transparent"
+                      ItemsSource="{Binding Attacks}">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="models:Attack">
+                        <TextCell  Text="{Binding Name}"
+                                   Detail="{Binding Type}"></TextCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </Grid>
 </ContentPage>
